--- a/client/src/public/stylesheets/Art.css
+++ b/client/src/public/stylesheets/Art.css
@@ -52,3 +52,21 @@
   text-align: center;
   color:  grey;
 }
+
+.fileDisplayContainer video,
+.fileDisplayContainer img, 
+.fileDisplayContainer audio {
+  width: 100%;
+}
+
+@media screen and (max-width: 600px) {
+  .fileDisplayContainer {
+    max-width: 75%;
+  }
+}
+
+@media not screen and (max-width: 600px) {
+  .fileDisplayContainer {
+    max-width: 600px;
+  }
+}
