--- a/client/src/public/stylesheets/Navbar.css
+++ b/client/src/public/stylesheets/Navbar.css
@@ -3,94 +3,137 @@
   justify-content: space-between;
   align-items: center;
   text-decoration: none;
-  height: 80px;
-  margin-left: 10px;
+  height: var(--navbar-height));
+}
+
+@media (min-width:550px) {
+  .logo {
+    height: calc(var(--navbar-height-desktop));
+  }
 }
 
 .logo span, .logo img {
-    font-size: 1.4rem;
-    color: #dfe6e9;
+    font-size: calc(0.25 * var(--navbar-height));;
+    color: black;
     text-decoration: none;
     cursor: pointer;
     transition: all 300ms linear 0s;
-    margin-right: 10px;
+    margin: 10px 0 10px 10px;
+}
+
+@media (min-width:550px) {
+  .logo span, .logo img {
+    font-size: calc(0.25 * var(--navbar-height-desktop));
+  }
 }
 
 
 .logo img{
-  height: 60px;
+  height: calc(0.75 * var(--navbar-height));
+}
+
+@media (min-width:550px) {
+  .logo img{
+    height: calc(0.75 * var(--navbar-height-desktop));
+  }
 }
 
 .navbar {
-  /* position: absolute; */
+  position: relative;
   width: 100%;
-  /* top: 0;
-  left: 0; */
-  background: #000000;
-  z-index: 1;
-  font-size: 1.4rem;
+  z-index: 100;
 }
 
 .flexcontainer {
   display: flex;
+  height: calc(var(--navbar-height));
   margin: auto;
   justify-content: space-between;
   align-items: center;
+  background: rgba(255, 255, 255, 1);
   text-decoration: none;
-  height: 80px;
+  box-shadow: 0 0 2px black;
+}
+
+@media (min-width:550px) {
+  .flexcontainer{
+    height: calc(var(--navbar-height-desktop));
+  }
 }
 
 .flexcontainer a {
-    font-size: 1.4rem;
-    color: white;
+    font-size: calc(0.25 * var(--navbar-height));;
+    color: black;
     text-decoration: none;
     cursor: pointer;
     transition: all 300ms linear 0s;
 }
 
-.links {
-  justify-self: end;
-  list-style-type: none;
-
-  & a {
-    color: #dfe6e9;
-    font-weight: 600;
-    border-bottom: 1px solid transparent;
-    margin: 0 1.5rem;
-    text-decoration: none;
-    cursor: pointer;
-
-    &:hover {
-      color: #fdcb6e;
-    }
-
-    @media (max-width: 768px) {
-      display: none;
-    }
+@media (min-width:550px) {
+  .flexcontainer a {
+    font-size: calc(0.25 * var(--navbar-height-desktop));
   }
 }
 
-.burgerwrapper {
-  margin: auto 0;
+.navLinks a {
+  margin-right: 30px;
+}
+.navLinks :hover {
+  color: var(--gold);
+}
 
-  @media (min-width: 769px) {
+.navLinks {
+  display: none;
+}
+
+@media (min-width:550px) {
+.navLinks {
+    display: unset;    
+  }
+}
+
+/* Burger Menu */
+
+.burger .burger-lines,
+.burger .burger-lines:after,
+.burger .burger-lines:before {
+  background-color: black; 
+}
+
+.burger {
+  margin: 1em;
+}
+
+.burger,
+.burgerLinks {
+  display: unset;
+  transition: all 300ms linear 0s;
+}
+
+.burgerLinks {
+  display:flex;
+  flex-direction: column;
+  background-color:white;
+  box-shadow: 0 0 2px black;
+}
+
+.burgerLinks a {
+  font-size: calc(0.25 * var(--navbar-height));;
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+  transition: all 300ms linear 0s;
+}
+
+.burgerLinks a {
+  margin: 20px 20px 20px 20px;
+}
+.burgerLinks :hover {
+  color: var(--gold);
+}
+
+@media (min-width: 550px) {
+  .burger, .burgerLinks {
     display: none;
   }
 }
-
-.navlinks li {
-    transition: all 300ms linear 0s;
-  }
-
-.navlinks a, .navlinks p {
-    font-size: 1.4rem;
-    color: #dfe6e9;
-    text-decoration: none;
-    cursor: pointer;
-    transition: all 300ms linear 0s;
-    margin-right: 30px;
-}
-.navlinks :hover {
-  color: #fdcb6e;
-}
-
