--- a/client/src/public/stylesheets/Art.css
+++ b/client/src/public/stylesheets/Art.css
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Merienda+One&display=swap');
 
 .polaroidFrame {
-  padding: 10% 5% 15% 5%;
+  padding: 30px 15px 15px 15px;
   border: 1px solid gray;
+  width: 268px;
   border-radius: 2px;
-  box-shadow: 5px 5px 5px #aaaaaa;
+  box-shadow: 5px 5px 5px black;
+  background-color: white;
   filter: sepia(.75);
   transition: 0.3s;
 }
@@ -29,6 +31,15 @@
   max-width: 100%;
 }
 
+.polaroidFrame .title,
+.polaroidFrame .description,
+.polaroidFrame .author {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
 .polaroidImage::after {
   box-shadow: inset 0px 0px 5px 5px rgba(0, 0, 0, 0.25);
   content: "";
@@ -44,16 +55,51 @@
   font-family: "Merienda One", cursive;
   text-align: center;
   color:  black;
-  padding: 10px 0 10px 0;
+  margin: 10px 0 10px 0;
 }
 
 .description {
   font-size: 12px;
   text-align: center;
   color:  grey;
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
+  margin-bottom: 10px;
 }
 
+.author {
+  font-size: 12px;
+  text-align: center;
+  color:  grey;
+}
+
+.gallery {
+  margin: 20px 0 20px 0;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.artContainer {
+  overflow: auto;
+  background-image: url("../images/corkBoard.jpg");
+  background-size: 600px;
+  min-height: 100%;
+}
+
+.artworkText {
+  margin: 20px;
+  max-width: 100%;
+}
+
+.artworkText .formField {
+  margin-bottom: 20px;
+}
+
+.artworkEditor {
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; 
+}
+
+.editorPreview {
+  margin: 20px;
+}
