Fixed a server issue and added some more features.

--- a/client/src/public/stylesheets/Account.css
+++ b/client/src/public/stylesheets/Account.css
@@ -1,5 +1,13 @@
 .accountContainer {
+}
+
+.editorContainer {
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   margin: 20px;
+
 }
 
 .authenticationMessage {
