--- a/client/src/public/stylesheets/Art.css
+++ b/client/src/public/stylesheets/Art.css
@@ -58,6 +58,15 @@
   margin: 10px 0 10px 0;
 }
 
+.galleryTitle {
+  font-size: min(8vw, 40px);
+  font-family: "Merienda One", cursive;
+  text-align: center;
+  color:  black;
+  margin: 10px 0 10px 0;
+}
+
+
 .description {
   font-size: 12px;
   text-align: center;
@@ -102,4 +111,11 @@
 
 .editorPreview {
   margin: 20px;
+}
+
+.artworkDisplay {
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; 
 }
