--- a/client/src/public/stylesheets/People.css
+++ b/client/src/public/stylesheets/People.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Merienda+One&display=swap');
 
 .profileFrame {
-  padding: 10% 5% 15% 5%;
+  padding: 30px 15px 15px 15px;
   border-radius: 2px;
+  width: 268px;
   transition: 0.3s;
   background-color: black;
   background-image:
@@ -31,6 +32,13 @@
   max-width: 100%;
 }
 
+.profileFrame .blurb {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
+}
+
 .profileFrame .name {
   font-size: 20px;
   text-align: left;
@@ -40,12 +48,12 @@
 
 .profileFrame .blurb {
   font-size: 12px;
+  color: white;
   text-align: left;
-  color:  var(--gold);
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-line-clamp: 4;
-  -webkit-box-orient: vertical;
+  padding-left: 10px;
+  border-left: 3px solid ;
+  border-color: var(--gold);
+  border-radius: 3px;
 }
 
 .peopleGallery {
