Fixed styling issue with profile pages.

--- a/client/src/public/stylesheets/Art.css
+++ b/client/src/public/stylesheets/Art.css
@@ -90,6 +90,7 @@
   overflow: auto;
   background-image: url("../images/corkBoard.jpg");
   background-size: 600px;
+  flex-grow: 1;
   min-height: 100%;
 }
 
