--- a/client/src/public/stylesheets/People.css
+++ b/client/src/public/stylesheets/People.css
@@ -5,6 +5,7 @@
   border-radius: 2px;
   width: 268px;
   transition: 0.3s;
+  color: white;
   background-color: black;
   background-image:
     linear-gradient(90deg, rgba(255,255,255,.07) 50%, transparent 50%),
@@ -37,16 +38,6 @@
   display: -webkit-box;
   -webkit-line-clamp: 5;
   -webkit-box-orient: vertical;
-}
-
-.profileFrame .name {
-  font-size: 20px;
-  text-align: left;
-  color: white;
-  padding: 10px 0 10px 0;
-}
-
-.profileFrame .blurb {
   font-size: 12px;
   color: white;
   text-align: left;
@@ -54,6 +45,20 @@
   border-left: 3px solid ;
   border-color: var(--gold);
   border-radius: 3px;
+  margin-top: 10px;
+}
+
+.profileFrame .name {
+  font-size: 20px;
+  text-align: left;
+  color: white;
+  margin-top: 10px;
+}
+
+.profileFrame .class {
+  font-size: 16px;
+  text-align: left;
+  color: var(--gold);
 }
 
 .peopleGallery {
