Massive changes to styling (and maybe fixed some bugs).

--- a/client/src/public/stylesheets/Account.css
+++ b/client/src/public/stylesheets/Account.css
@@ -4,33 +4,41 @@
   min-height: 100%;
 }
 
-.editorContainer {
-  display:flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 20px;
-
-}
-
 .authenticationMessage {
-  margin-bottom: 20px;
-}
-
-.profileText {
   margin: 20px;
-  max-width: 100%;
 }
 
-.profileText .formField {
+.signoutButton {
+  display: inline-block;
+  align-self: center;
+  padding: 0.4em 0.75em 0.4em 0.75em;
+  border-radius: 0.2em;
+  color: white;
+  text-align: center;
+  transition: filter 0.3s;
+  background-color: var(--bloodred);
+}
+
+.signoutButton:hover {
+  filter: brightness(75%);
+  cursor: pointer;
+}
+
+.profileEditor .formField {
   margin-bottom: 20px;
+  width: 100%;
+}
+
+.profileEditor .formField textarea{
+  width: 75%;
 }
 
 .profileEditor {
   display:flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center; 
+  align-items: flex-start;
+  margin: 20px; 
 }
 
 .profilePreview {
