--- a/client/src/utilities.css
+++ b/client/src/utilities.css
@@ -46,9 +46,14 @@ body {
 
 button,
 input,
-select {
+select,
+textarea {
   font: inherit;
   padding: 0.1em 0.3em 0.1em 0.3em;
+}
+
+textarea {
+  resize: vertical;
 }
 
 form {
