Implemented Markdown editor for blogposts.

--- a/client/src/public/stylesheets/Art.css
+++ b/client/src/public/stylesheets/Art.css
@@ -50,7 +50,7 @@
   width: 100%;
 }
 
-.title {
+.artworkText .title {
   font-size: 20px;
   font-family: "Merienda One", cursive;
   text-align: center;
