--- a/client/src/public/stylesheets/Blog.css
+++ b/client/src/public/stylesheets/Blog.css
@@ -1,94 +1,103 @@
 @import url('https://fonts.googleapis.com/css2?family=Merienda+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
-.polaroidFrame {
-  padding: 30px 15px 15px 15px;
-  border: 1px solid gray;
-  width: 268px;
-  border-radius: 2px;
-  box-shadow: 5px 5px 5px black;
-  background-color: white;
-  filter: sepia(.75);
-  transition: 0.3s;
+.blogpostFrame {
+  padding: 30px 30px 30px 30px;
+  border-top: 2px solid gray;
+  border-radius: 4px;
+  filter: saturate(1);
+  transition: 0.5s;
+  width: 60vw;
 }
 
-.polaroidFrame:hover {
-  filter: sepia(0);
+.blogpostFrame:hover {
+  filter: saturate(1.5);
 }
 
-.polaroidImage {
+.blogpostImage {
   display:flex;
   align-items:center;
   justify-content:center;
-  background-color: black;
-  min-height: 300px;
   position: relative;
   overflow: hidden;
-  border: 1px solid gray;
 }
 
-.polaroidImage img{
+.blogpostImage img{
   display: block;
+  max-height: 500px;
   max-width: 100%;
 }
 
-.polaroidFrame .title,
-.polaroidFrame .description,
-.polaroidFrame .author {
+.blogpostFrame .title,
+.blogpostFrame .description,
+.blogpostFrame .author {
   overflow: hidden;
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
 
-.polaroidImage::after {
-  box-shadow: inset 0px 0px 5px 5px rgba(0, 0, 0, 0.25);
-  content: "";
-  display: block;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  width: 100%;
-}
-
-.polaroidFrame div.title, .blogHeader div.title {
-  font-size: 20px;
-  font-family: "Merienda One", cursive;
-  text-align: center;
-  color:  black;
-  margin: 20px;
-}
-
-.galleryTitle {
+.blogpostFrame div.title {
   font-size: min(8vw, 40px);
-  font-family: "Merienda One", cursive;
+  font-weight: 450;
+  color:  black;
+}
+
+.blogpostFrame div.tagline {
+  font-size: min(4.8vw, 24px);
+  color:  grey;
+  margin-bottom: 12px;
+}
+
+.blogpostFrame div.author {
+  font-size: min(3.6vw, 18px);
+  color: #0077cc;
+  margin-bottom: 40px;
+}
+
+.blogpostImage img,
+.blogpostImage video,
+.blogpostImage audio {
+  max-height: 50vh;
+  max-width: 100%;
+}
+
+.blogHeader .fileDisplayContainer img,
+.blogHeader .fileDisplayContainer video,
+.blogHeader .fileDisplayContainer audio {
+  max-height: 50vh;
+  max-width: 100%;
+}
+.blogContainer .galleryTitle {
+  font-size: min(8vw, 40px);
+  font-weight: 450;
   text-align: center;
   color:  black;
-  margin: 10px 0 10px 0;
-}
-
-
-.tagline{
-  font-size: 14px;
-  text-align: center;
-  color:  grey;
-  margin: 0 20px 20px 20px;
-}
-
-.author {
-  font-size: 14px;
-  text-align: center;
-  color:  grey;
-  margin: 0 20px 20px 20px;
+  margin-bottom: 20px;
 }
 
 .author span {
   white-space: pre;
 }
 
-.gallery {
-  margin: 20px 0 20px 0;
+.blogContainer .gallery {
   display: flex;
-  justify-content: flex-end;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.blogContainer {
+  overflow: auto;
+  font-family: "Open Sans", sans-serif;
+  background-color: #fff;
+  background-image:
+  linear-gradient(90deg, transparent 79px, #abced4 79px, #abced4 81px, transparent 81px),
+  linear-gradient(#eee .1em, transparent .1em);
+  background-size: 100% 2em;
+  flex-grow: 1;
+  min-height: 100%;
+  padding: 20px;
 }
 
 .blogpostContainer {
@@ -112,7 +121,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: stretch;
-  margin: 20px;
+  padding: 20px;
 }
 
 .editorPreview {
@@ -129,4 +138,46 @@
 .editorInput {
   font-family: '"Fira code", "Fira Mono", monospace';
   font-size: 1em;
+}
+
+.blogHeader div.title {
+  font-size: min(8vw, 40px);
+  font-family: "Nunito:Sans", sans-serif;
+  font-weight: 450;
+  color:  black;
+}
+
+.blogHeader div.tagline {
+  font-size: min(4.8vw, 24px);
+  color:  grey;
+  margin-bottom: 12px;
+}
+
+.blogHeader div.author {
+  font-size: min(3.6vw, 18px);
+  color: #0077cc;
+  margin-bottom: 40px;
+}
+
+.blogHeader .fileDisplayContainer {
+  background-color: black;
+  padding: 0 40px 0 40px;
+  margin: 0 -40px 20px -40px;
+}
+
+.blogHeader .fileDisplayContainer img,
+.blogHeader .fileDisplayContainer video,
+.blogHeader .fileDisplayContainer audio {
+  max-height: 50vh;
+  max-width: 100%;
+}
+
+.blogpostViewer {
+  font-family: "Open Sans", sans-serif;
+  padding: 40px;
+}
+
+.blogpostEditor .blogpostViewer {
+  border-radius: 2px;
+  border: 1px solid black;
 }
