--- a/client/src/public/stylesheets/Blog.css
+++ b/client/src/public/stylesheets/Blog.css
@@ -181,3 +181,18 @@
   border-radius: 2px;
   border: 1px solid black;
 }
+.editorWrapper {
+  display: flex;
+  flex-direction: row;
+}
+
+.monacoWrapper {
+  display: flex;
+  width: 50vw;
+
+}
+
+.monacoPreview {
+  width: 50vw;
+  padding: 20px;
+}
