--- a/client/src/public/stylesheets/Blog.css
+++ b/client/src/public/stylesheets/Blog.css
@@ -3,15 +3,27 @@
 
 .blogpostFrame {
   padding: 30px 30px 30px 30px;
-  border-top: 2px solid gray;
-  border-radius: 4px;
-  filter: saturate(1);
-  transition: 0.5s;
+  margin-top: 20px;
+  border-top: 4px solid rgba(220, 255, 255, 0.8);
+  border-left: 4px solid rgba(220, 255, 255, 1);
+  border-right: 4px solid rgba(220, 255, 255, 0.2);
+  border-bottom: 4px solid rgba(220, 255, 255, 0.4);
   width: 60vw;
-}
-
-.blogpostFrame:hover {
-  filter: saturate(1.5);
+  background-color: rgba(220, 255, 255, 0.6);
+  background-image: repeating-linear-gradient(45deg, transparent 5px, rgba(200, 220, 220, 0.5) 5px, rgba(200, 220, 220, 0.5) 10px,
+    transparent 10px, transparent 35px, rgba(200, 220, 220, 0.5) 35px, rgba(200, 220, 220, 0.5) 40px,
+    rgba(200, 220, 220, 0.5) 40px, rgba(200, 220, 220, 0.5) 50px, transparent 50px, transparent 60px,
+    hsla(5, 53%, 63%, 0.5) 60px, hsla(5, 53%, 63%, 0.5) 70px, hsla(35, 91%, 65%, 0.5) 70px, hsla(35, 91%, 65%, 0.5) 80px,
+    transparent 80px, transparent 90px, hsla(5, 53%, 63%, 0.5) 90px, hsla(5, 53%, 63%, 0.5) 110px,
+    transparent 110px, transparent 120px, rgba(200, 220, 220, 0.5) 120px, rgba(200, 220, 220, 0.5) 140px
+    ),
+  repeating-linear-gradient(135deg, transparent 5px, rgba(200, 220, 220, 0.5) 5px, rgba(200, 220, 220, 0.5) 10px,
+    transparent 10px, transparent 35px, hsla(5, 53%, 63%, 0.5) 35px, hsla(5, 53%, 63%, 0.5) 40px,
+    rgba(200, 220, 220, 0.5) 40px, rgba(200, 220, 220, 0.5) 50px, transparent 50px, transparent 60px,
+    hsla(5, 53%, 63%, 0.5) 60px, hsla(5, 53%, 63%, 0.5) 70px, hsla(35, 91%, 65%, 0.5) 70px, hsla(35, 91%, 65%, 0.5) 80px,
+    transparent 80px, transparent 90px, hsla(5, 53%, 63%, 0.5) 90px, hsla(5, 53%, 63%, 0.5) 110px,
+    transparent 110px, transparent 140px, rgba(200, 220, 220, 0.5) 140px, rgba(200, 220, 220, 0.5) 160px
+  );
 }
 
 .blogpostImage {
@@ -40,18 +52,18 @@
 .blogpostFrame div.title {
   font-size: min(8vw, 40px);
   font-weight: 450;
-  color:  black;
+  color: rgba(35, 0, 0, 1); 
 }
 
 .blogpostFrame div.tagline {
   font-size: min(4.8vw, 24px);
-  color:  grey;
+  color: rgba(35, 0, 0, 0.8); 
   margin-bottom: 12px;
 }
 
 .blogpostFrame div.author {
   font-size: min(3.6vw, 18px);
-  color: #0077cc;
+  color: rgba(0, 50, 0, 0.8); 
   margin-bottom: 40px;
 }
 
@@ -63,8 +75,7 @@
 }
 
 .blogHeader .fileDisplayContainer img,
-.blogHeader .fileDisplayContainer video,
-.blogHeader .fileDisplayContainer audio {
+.blogpostEditor .fileDisplayContainer img{
   max-height: 50vh;
   max-width: 100%;
 }
@@ -73,7 +84,6 @@
   font-weight: 450;
   text-align: center;
   color:  black;
-  margin-bottom: 20px;
 }
 
 .author span {
@@ -128,6 +138,10 @@
   margin: 20px;
 }
 
+.buttonContainer {
+  margin-bottom: 20px;
+}
+
 .editorContainer {
   border: 1px solid black;
   border-radius: 3px;
@@ -142,7 +156,6 @@
 
 .blogHeader div.title {
   font-size: min(8vw, 40px);
-  font-family: "Nunito:Sans", sans-serif;
   font-weight: 450;
   color:  black;
 }
@@ -173,8 +186,13 @@
 }
 
 .blogpostViewer {
-  font-family: "Open Sans", sans-serif;
   padding: 40px;
+}
+
+.blogpostViewer .blogHeader,
+.blogpostViewer .content,
+.monacoPreview {
+  font-family: "Open Sans", sans-serif;
 }
 
 .blogpostEditor .blogpostViewer {
@@ -184,15 +202,72 @@
 .editorWrapper {
   display: flex;
   flex-direction: row;
+  height: 50vh;
 }
 
 .monacoWrapper {
   display: flex;
   width: 50vw;
-
 }
 
 .monacoPreview {
   width: 50vw;
+  border: 1px solid black;
+  padding: 0 40px 0 40px;
+  height: calc(100% - 1px);
+  overflow: auto;
+}
+
+.commentForm {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.commentForm label {
+  margin-bottom: 20px;
+}
+
+.commentBox {
+  border: 1px solid #ddd;
+  margin: 25px 0 0 0;
   padding: 20px;
+}
+
+.commentAuthor {
+  font-size: 18px;
+  margin-left: 5px;
+  font-weight: 500;
+}
+
+.commentInfo {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  white-space: pre;
+}
+
+.commentReply {
+  margin-left: 40px;
+}
+
+.comment {
+  margin-bottom: 20px;
+}
+
+.profileIcon {
+  width: 30px;
+  border-radius: 15px;
+  height: 30px;
+  object-fit: cover;
+}
+
+.commentSection div.title {
+  font-size: min(8vw, 20px);
+}
+
+.commentDivider {
+  border-top: 1px solid black;
+  margin: 40px 40px 40px 40px;
 }
