--- a/client/src/public/stylesheets/Blog.css
+++ b/client/src/public/stylesheets/Blog.css
@@ -2,19 +2,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
 .blogpostFrame {
+  grid-area: 1 / 1 / 1 / 1;
+  
   display: flex;
-  justify-content: stretch;
+  justify-content: space-between;
   align-items: center;
-
-  margin-bottom: 20px;
   padding: 20px 20px 20px 20px;
-  width: 80vw;
+  
+  filter        : blur(0px);
+  -moz-filter   : blur(0px);
+  -webkit-filter: blur(0px);
+  -o-filter     : blur(0px);
+}
+
+.blogpostFrameWrapper {
+  display: grid;
 
   border-top: 4px solid rgba(220, 255, 255, 0.8);
   border-left: 4px solid rgba(220, 255, 255, 1);
   border-right: 4px solid rgba(220, 255, 255, 0.2);
   border-bottom: 4px solid rgba(220, 255, 255, 0.4);
   background-color: rgba(220, 255, 255, 0.6);
+  margin-bottom: 20px;
+  width: min(800px, 80vw);
+}
+
+.frostedGlass {
+  grid-area: 1 / 1 / 1 / 1;
   background-image: repeating-linear-gradient(45deg, transparent 5px, rgba(200, 220, 220, 0.5) 5px, rgba(200, 220, 220, 0.5) 10px,
     transparent 10px, transparent 35px, rgba(200, 220, 220, 0.5) 35px, rgba(200, 220, 220, 0.5) 40px,
     rgba(200, 220, 220, 0.5) 40px, rgba(200, 220, 220, 0.5) 50px, transparent 50px, transparent 60px,
@@ -29,26 +43,27 @@
     transparent 80px, transparent 90px, hsla(5, 53%, 63%, 0.5) 90px, hsla(5, 53%, 63%, 0.5) 110px,
     transparent 110px, transparent 140px, rgba(200, 220, 220, 0.5) 140px, rgba(200, 220, 220, 0.5) 160px
   );
-  transition: 0.3s;
+  filter : blur(1px);
 }
 
-.blogpostFrame:hover {
-  filter: brightness(1.05);
+.blogpostFrameWrapper:hover{
 }
 
 .blogpostFrameText {
   font-size: min(3.6vw, 18px);
-  color: gray;
   margin-right: 20px;
   min-width: 66%;
 }
 
 .blogpostImage {
+  height: min(100px, 20vw);
+  width: min(100px, 20vw);
+  background-color: black;
 }
 
 .blogpostImage img {
-  height: min(120px, 30vw);
-  width: 100%;
+  height: min(100px, 20vw);
+  width: min(100px, 20vw);
   object-fit: contain;
 }
 
@@ -67,14 +82,9 @@
 }
 
 .blogpostFrame div.tagline {
-  font-size: min(4.8vw, 24px);
+  font-size: min(4vw, 20px);
   color: rgba(35, 0, 0, 0.8); 
-  margin-bottom: 12px;
-}
-
-.blogpostFrame span.author {
-  color: rgba(0, 50, 0, 0.8); 
-  margin-bottom: 40px;
+  font-style: italic;
 }
 
 .blogHeader .fileDisplayContainer img,
@@ -84,14 +94,11 @@
 }
 .blogContainer .galleryTitle {
   font-size: min(8vw, 40px);
+  font-family: "Open Sans", sans-serif;
   font-weight: 450;
   text-align: center;
   color:  black;
   margin-bottom: 20px;
-}
-
-.author span {
-  white-space: pre;
 }
 
 .blogContainer .gallery {
@@ -103,7 +110,6 @@
 
 .blogContainer {
   overflow: auto;
-  font-family: "Open Sans", sans-serif;
   background-color: #fff;
   background-image:
   linear-gradient(90deg, transparent 79px, #abced4 79px, #abced4 81px, transparent 81px),
@@ -171,9 +177,7 @@
 }
 
 .blogHeader div.author {
-  font-size: min(3.6vw, 18px);
-  color: #0077cc;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 
 .blogHeader .fileDisplayContainer {
@@ -193,7 +197,6 @@
   padding: 40px;
 }
 
-.blogpostViewer .blogHeader,
 .blogpostViewer .content,
 .monacoPreview {
   font-family: "Open Sans", sans-serif;
